ST-5: Fix superfish z-index

--- a/public/themes/custom/helstra/src/scss/components/navigation/_superfish.scss
+++ b/public/themes/custom/helstra/src/scss/components/navigation/_superfish.scss
@@ -1,3 +1,3 @@
-#superfish-main {
-  
+ul.sf-menu li {
+  z-index: 100;
 }
